footer and header stay stable and are both visible while scrolling the pdf content. Issue #70

--- a/style/test.css
+++ b/style/test.css
@@ -37,7 +37,7 @@
 
 .embediFrameBig {
 	width: 475px;
-	height: 820px;
+	height: 620px;
 	border: none;
 	overflow: hidden;
 }
